# ZF_TriAxisCamControl

./: .gitignore  CMakeLists.txt  README.md  cusbcamera.cpp  cusbcamera.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vcpkg.json
ext/LuBon_mover_C++SDK/: LubonMoverConfig.cmake
ext/LuBon_mover_C++SDK/x64/include/: MoverLibrary.h  deviceModelsParam
